@@ -20,7 +20,6 @@ import java.io.Reader;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedHashMap;
@@ -157,7 +156,7 @@ public class Reactor
     public static Reactor defaultReactor()
         throws Exception
     {
-        return new Reactor( Paths.get( "." ).toRealPath() );
+        return new Reactor( Path.of( "." ).toRealPath() );
     }
 
     public Path getProjectDir( ProjectDescriptor project )
